third_party/move/move-compiler-v2/tests/more-v1/expansion/use_function_unbound.exp

Diagnostics:
error: unbound module member
  ┌─ tests/more-v1/expansion/use_function_unbound.move:6:17
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
6 │     use 0x2::X::u;
  │                 ^ Invalid 'use'. Unbound member 'u' in module '0x2::X'
